--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -5,7 +5,7 @@
   <head>
 
     <title>Product Gallery</title>
-    <a href="./index.html"><img class="logo" src="../../HW/assets/logo/logo-01.svg" /></a>
+    <a href="./index.html"><img class="logo" alt="Bakery Logo:" src="../../HW/assets/logo/logo-01.svg" /></a>
     <hr class="solid">
 
 
